# interview

./: .env  Dockerfile  README.MD  app.py  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 7ad2fa123528_.py
models/: investors.py
schemas/: investors.py
utils/: parsers.py
views/: investors.py
